remove unneeded modules

--- a/OpenAI.ipynb
+++ b/OpenAI.ipynb
@@ -39,10 +39,8 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
         "import openai\n",
-        "import getpass\n",
-        "import json\n"
+        "import getpass\n"
       ]
     },
     {
