--- a/OpenAI.ipynb
+++ b/OpenAI.ipynb
@@ -177,7 +177,7 @@
     "id": "7jm9xaEXtw_O"
    },
    "source": [
-    "# Capture OpenAI API Token"
+    "## Capture OpenAI API Token"
    ]
   },
   {
